--- a/src/components/FeedbackOptions/FeedbackOptions.css
+++ b/src/components/FeedbackOptions/FeedbackOptions.css
@@ -5,6 +5,7 @@
   background-color: transparent;
   cursor: pointer;
   border-radius: 4px;
+  background-color: green;
 }
 .FeedbackOptions__btn:hover {
   color: #fff;
